src/styles/main.scss
@import 'utils';
@import 'fonts';
@import 'typography';

* {
  @include set-spaces(0, 0);

  box-sizing: border-box;
  transition: all $element-transition ease;
}

html {
  scroll-behavior: smooth;
  overflow-x: hidden;
}

body {
  margin: 0;
  background: $c-gray;
  max-width: $page-max-width;
  box-sizing: border-box;
  margin-inline: auto;
}

img {
  cursor: pointer;

  &:hover {
    box-shadow: 10px 10px $c-grey-blue;
  }
}

article {
  cursor: pointer;
}

.button {
  display: block;

  @include flex-center;
  @include set-font($font-raleway, 16px, 600, $c-font-white, 100%);
  @include set-size(100%, 60px);

  text-decoration: none;
  grid-column: 1 / 4;
  background-color: $c-button-main;
  border: none;

  &:hover {
    background-color: $c-button-hover;
  }

  &:active {
    background-color: $c-button-passed;
  }

  &:disabled {
    background-color: $c-button-disabled;
  }

  @include on-phone {
    grid-column: 1 / -1;
  }

  &--light {
    margin: 0;
    grid-column: 10 / -1;
    background-color: transparent;
    border: 1px solid $c-button-main;
    color: $c-button-main;

    &:hover {
      background-color: inherit;
      border-color: $c-button-hover;
      color: $c-button-hover;
    }

    &:active {
      background-color: inherit;
      border-color: $c-button-passed;
      color: $c-button-passed;
    }

    &:disabled {
      background-color: inherit;
      border-color: $c-button-disabled;
      color: $c-button-disabled;
    }

    @include on-tablet {
      grid-column: 5 / -1;
    }

    @include on-phone {
      grid-column: 1 / -1;
      margin-top: 30px;
    }
  }
}

a {
  text-decoration: none;
  color: $c-font-white;
}

.top-bar {
  @include flex-center;
  @include set-size(100%, 90px);

  grid-column: 1 / -1;
  grid-row: 1 / 1;
  justify-content: space-between;

  @include on-tablet {
    height: 77px;
  }
  @include on-phone {
    height: 80px;
  }

  &__logo {
    cursor: pointer;
    height: 40%;
    object-fit: contain;

    &:hover {
      transform: scale($element-scale);
    }
  }

  &__wrappper {
    @include flex-center;
    @include set-spaces(0, 0);

    flex-wrap: nowrap;
    gap: 40px;
    flex-direction: row;

    @include on-phone {
      flex-direction: row-reverse;
      gap: 20px;
    }
  }
  &__link {
    @include set-size(30px, 30px);

    display: block;
  }

  &__select {
    @include flex-center;
  }

  &__lang {
    @include set-font($font-raleway, 16px, 500, $c-font-white, 150%);

    background: transparent;
    border: none;
    outline: none;
    cursor: pointer;
    padding: 8px 12px;
    border-radius: 4px;
    box-shadow: none;
    appearance: none;
    -webkit-appearance: none;
    -moz-appearance: none;

    &:focus,
    &:active,
    &:hover {
      transform: scale($element-scale);
      outline: none;
      border: none;
      box-shadow: none;
    }
  }
}

.front-image {
  @include set-size(50vw, 80vh);

  position: absolute;
  bottom: 0;
  right: 0;
  z-index: 10;

  @include on-tablet {
    @include set-size(55vw, 45vh);

    background-position: bottom;
    position: inherit;
    grid-column: 1 / -1;
    grid-row: 4 / 4;
    align-self: end;
    justify-self: center;
  }

  @include on-phone {
    @include set-size(80vw, 40vh);

    grid-column: 1 / -1;
  }
}

.section {
  @include set-padding-inline;

  width: 100%;
  margin-top: 13vh;
  max-width: $content-max-width;
  margin-inline: auto;

  &__title {
    @include set-font($font-playFair, 48px, 700, $c-font-black, 120%);

    margin: 0;
    grid-column: 1 / 7;

    @include on-tablet {
      grid-column: 1 / 5;
      font-size: 40px;
    }

    @include on-phone {
      font-size: 28px;
      grid-column: 1 / -1;
    }
  }

  &__content {
    @include set-size(100%, 100%);
    @include set-grid;
  }
}

.article {
  &__date {
    @include set-font($font-raleway, 16px, 400, $c-button-main, 150%);
  }

  &__title {
    @include set-font($font-playFair, 24px, 700, $c-font-black, 125%);
  }

  &__decription {
    @include set-font($font-raleway, 16px, 400, $c-font-grey, 150%);
  }
}

.icon:hover {
  transform: scale($element-scale);
}
/* ... */

